change sections to container class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
   </head>
   <body class="main-content">
-    <header class="section sec1 header active" id="home">
+    <header class="container header active" id="home">
       <div class="header-content">
         <div class="left-header">
           <div class="h-shape"></div>
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <section class="section sec2 about" id="about">
+      <section class="container about" id="about">
         <div class="main-title">
           <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
         </div>
@@ -175,7 +175,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec3 portfolio" id="portfolio">
+      <section class="container" id="portfolio">
         <div class="main-title">
           <h2>My <span>Portfolio</span><span class="bg-text">my work</span></h2>
         </div>
@@ -190,7 +190,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="jkawards.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -203,7 +203,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="joankirui.github.io/delani-studio" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -216,7 +216,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="galleryjk.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -229,7 +229,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="blogsitejk.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -242,7 +242,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="joankirui.github.io/ip4" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -255,7 +255,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="joankirui.github.io/quotes-app/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -268,7 +268,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="" class="icon">
+              <a href="pitchesjk.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -277,8 +277,8 @@
       </div>
       </section>
       <!-- <section class="section sec4 blogs" id="blogs"></section> -->
-      <section class="section sec5 contact" id="contact">
-        <div class="contact-content">
+      <section class="container contact" id="contact">
+        <div class="contact-container">
           <div class="main-title">
             <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
           </div>
