--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
           </h1>
           <p>
             I'm a Web Developer,I love to create beautiful and functional
-            websites. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Maxime mollitia, molestiae quas vel sint commodi repudiandae
+            websites. I'm also a mathematics guru.
           </p>
           <div class="btn-con">
             <a href="" class="main-btn">
@@ -190,7 +189,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="jkawards.herokuapp.com/" class="icon">
+              <a href="https://jkawards.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -203,7 +202,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="joankirui.github.io/delani-studio" class="icon">
+              <a href="https://joankirui.github.io/Delani-studio/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -216,7 +215,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="galleryjk.herokuapp.com/" class="icon">
+              <a href="https://galleryjk.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -229,7 +228,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="blogsitejk.herokuapp.com/" class="icon">
+              <a href="https://blogsitejk.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -242,7 +241,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="joankirui.github.io/ip4" class="icon">
+              <a href="https://joankirui.github.io/IP4/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -255,7 +254,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="joankirui.github.io/quotes-app/" class="icon">
+              <a href="https://joankirui.github.io/Quotes-app/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -268,7 +267,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="pitchesjk.herokuapp.com/" class="icon">
+              <a href="https://pitchesjk.herokuapp.com/" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -276,7 +275,6 @@
         </div>
       </div>
       </section>
-      <!-- <section class="section sec4 blogs" id="blogs"></section> -->
       <section class="container contact" id="contact">
         <div class="contact-container">
           <div class="main-title">
@@ -286,8 +284,7 @@
             <div class="left-contact">
               <h4>Contact me here</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                Details on how you can reach me are here below:
               </p>
               <div class="contact-info">
                 <div class="contact-item">
