--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             websites. I'm also a mathematics guru.
           </p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <a href="./img/cv.pdf" class="main-btn" download="JOAN CHELANGAT CV">
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -56,12 +56,14 @@
           <div class="left-about">
             <h4>Information About me</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-              mollitia, molestiae quas vel sint commodi repudiandae consequuntur
-              voluptatum laborum
+              Results-driven software professional with substantial experience and outstanding technical skills. 
+              Accustomed to working in fast-paced environments with the ability to think quickly. Superb 
+              analytical and problem-solving skills leveraged to proactively solve software related problems. Able 
+              to assess risks, troubleshoot problems and conduct tests. Excellent communication and planning 
+              abilities. Skilled in problem solving, and programming.
             </p>
             <div class="btn-con">
-              <a href="" class="main-btn">
+              <a href="./img/cv.pdf" class="main-btn" download="JOAN CHELANGAT CV">
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
@@ -93,84 +95,36 @@
           <div class="my-skills">
             <div class="row">
               <div class="col-md-3">
-                <img src="img/djangologo.png" height="100" width="150" alt="" />
+                <img src="img/djangologo.png" height="100" width="150" alt="django" />
               </div>
               <div class="col-md-3">
-                <img src="img/flask.svg" height="100" width="150" alt="" />
+                <img src="img/flask.svg" height="100" width="150" alt="flask" />
               </div>
               <div class="col-md-3">
-                <img src="img/angular.svg" height="100" width="150" alt="" />
+                <img src="img/angular.svg" height="100" width="150" alt="angular" />
               </div>
               <div class="col-md-3">
-                <img src="img/htmlcssjs.jpeg" height="100" width="150" alt="" />
+                <img src="img/htmlcssjs.jpeg" height="100" width="150" alt="htmlcssjs" />
               </div>
             </div>
             <br />
             <div class="row">
-              <div class="col-md-4">
-                <img src="img/postgresql.svg" height="100" alt="" />
+              <div class="col-md-3">
+                <img src="img/postgresql.svg" height="100" alt="postgresql" />
                 <p>Postgresql</p>
               </div>
-              <div class="col-md-4">
-                <img src="img/gitt.png" height="100" alt="" />
+              <div class="col-md-3">
+                <img src="img/gitt.png" height="100" alt="git" />
               </div>
-              <div class="col-md-4">
-                <img src="img/python2.png" height="100" width="100" alt="" />
+              <div class="col-md-3">
+                <img src="img/python2.png" height="100" width="100" alt="python" />
                 <p>Python</p>
               </div>
+              <div class="col-md-3">
+                <img src="img/reactjs-removebg-preview.png" height="100" width="100" alt="react" />
+                <p>React</p>
+              </div>
             </div>
-          </div>
-        </div>
-        <h4 class="stat-title">My Timeline</h4>
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fa-solid fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">October 2021 - Februay 2022</p>
-            <h5>Web development <span> - Moringa school</span></h5>
-            <p>
-              Learnt Front-end technologies e.g HTML,CSS,JS & angular
-              Software versioning management using Git 
-              Relational database e.g PostgreSQL 
-              Python frameworks Flask and Django 
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fa-solid fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2017 - 2021</p>
-            <h5>Mathematics & Computer Science Degree <span> - Jomo Kenyatta University of Agriculture and Technology</span></h5>
-            <p>
-             Took Applied Mathematics option and scored 
-             a Second Class Honours(Upper Division) 
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fa-solid fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">July 2021 - Sept 2021</p>
-            <h5>Software Engineer <span> - Delta Freight Africa(startup)</span></h5>
-            <p>
-              Worked closely with software development team members to design and develop robust software solutions to meet client requirements for functionality,scalability and perfomance.
-              Establish and apply metrics to determine the readiness,quality and operability of software systems and products.
-              Design,code and debug applications in various software languages.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fa-solid fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">April 2021 - June 2021</p>
-            <h5>Supervisor <span> - Uninets WiFi Solutions</span></h5>
-            <p>
-              Oversaw internet installations and CCTV installations.
-              Creating and managing employees schedule and scheduling installations.
-              Helping to resolve employee issues and disputes.
-              Getting customer feedback. 
-            </p>
           </div>
         </div>
       </section>
@@ -360,7 +314,7 @@
                   <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
               </div>
               <div class="submit-btn">
-                <a href="#" class="main-btn">
+                <a href="./img/cv.pdf" class="main-btn" download="JOAN CHELANGAT CV">
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
                 </a>
