fix cv and add more skills

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="right-header">
           <h1 class="name">
             Hi,I'm <span>Joan Chelangat Kirui.</span>
-            A web developer.
+            A Frontend Software developer.
           </h1>
           <p>
-            I'm a Web Developer,I love to create beautiful and functional
+            I'm a Frontend Software developer,I love to create beautiful and functional
             websites. I'm also a mathematics guru.
           </p>
           <div class="btn-con">
@@ -81,7 +81,7 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">2</p>
+                <p class="large-text">3+</p>
                 <p class="small-text">
                   Years of <br />
                   experience
@@ -94,35 +94,44 @@
           <h4 class="stat-title">My Skills</h4>
           <div class="my-skills">
             <div class="row">
-              <div class="col-md-3">
-                <img src="img/djangologo.png" height="100" width="150" alt="django" />
+              <div class="col-md-2">
+                <img src="img/reactjs-removebg-preview.png" height="100" width="120" alt="react" />
+                <p>React</p>
               </div>
-              <div class="col-md-3">
-                <img src="img/flask.svg" height="100" width="150" alt="flask" />
+              <div class="col-md-2">
+                <img src="img/typescript.png" height="100" alt="typescript" />
+                <p>Typescript</p>
               </div>
-              <div class="col-md-3">
-                <img src="img/angular.svg" height="100" width="150" alt="angular" />
-              </div>
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <img src="img/htmlcssjs.jpeg" height="100" width="150" alt="htmlcssjs" />
+              </div>
+              <div class="col-md-2">
+                <img src="img/bootstrap.png" height="100" alt="bootstrap" />
+                <p>Boostrap</p>
+              </div>
+              <div class="col-md-2">
+                <img src="img/tailwind.png" height="100" width="150" alt="Tailwind" />
+                <p>Tailwind</p>
               </div>
             </div>
             <br />
             <div class="row">
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <img src="img/postgresql.svg" height="100" alt="postgresql" />
                 <p>Postgresql</p>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-2">
+                <img src="img/flask.svg" height="100" width="150" alt="flask" />
+              </div>
+              <div class="col-md-2">
                 <img src="img/gitt.png" height="100" alt="git" />
               </div>
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <img src="img/python2.png" height="100" width="100" alt="python" />
                 <p>Python</p>
               </div>
-              <div class="col-md-3">
-                <img src="img/reactjs-removebg-preview.png" height="100" width="100" alt="react" />
-                <p>React</p>
+              <div class="col-md-2">
+                <img src="img/djangologo.png" height="100" width="150" alt="django" />
               </div>
             </div>
           </div>
@@ -292,8 +301,8 @@
                   <a href="https://github.com/joankirui" target="_blank">
                     <i class="fa-brands fa-github"></i>
                   </a>
-                  <a href="#" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
+                  <a href="https://www.linkedin.com/in/joan-kirui-66208518a/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
                   </a>
                   <a href="#" target="_blank">
                     <i class="fa-brands fa-twitter"></i>
