add working links

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="https://jkawards.herokuapp.com/" class="icon">
+              <a href="https://github.com/joankirui/Awards" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -178,7 +178,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="https://galleryjk.herokuapp.com/" class="icon">
+              <a href="https://github.com/joankirui/Gallery" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -191,7 +191,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="https://blogsitejk.herokuapp.com/" class="icon">
+              <a href="https://github.com/joankirui/Blog_site" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -230,7 +230,7 @@
           <div class="hover-items">
             <h3>Project Source</h3>
             <div class="icons">
-              <a href="https://pitchesjk.herokuapp.com/" class="icon">
+              <a href="https://github.com/joankirui/Pitches" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
