--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                   <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
               </div>
               <div class="submit-btn">
-                <a href="./img/cv.pdf" class="main-btn" download="JOAN CHELANGAT CV">
+                <a href="img/cv.pdf" class="main-btn" download="JOAN CHELANGAT CV">
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
                 </a>
